# TITAN

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_report_example.html
.github/workflows/: ci.yml  cy.yml  deploy-frontend.yml  deploy.yml
app/: main.py
app/agents/: graph.py  nodes.py  state.py
app/core/: config.py  db_pool.py  llm.py  mcp_client.py  prompts.py
app/db/: session.py
app/mcp/: finance_server.py
app/models/: report.py
app/schemas/: report_schema.py
app/services/: chronos_client.py  embedder.py  parser.py  rag.py  retriever.py
app/templates/: financial_report.html
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
scripts/: evaluate_rag.py  gpu_check.py
scripts/db/: init.sql
scripts/ingest/: clean_data.py  download_sec.py  vectorize.py
tests/: conftest.py
tests/integration/: test_agent_api.py  test_api.py  test_database.py
tests/unit/: test_agents.py  test_chronos_client.py  test_forecast_agent.py  test_parser.py  test_routing.py
